In theory mobile friendly

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="hero-content">
         <img src="your-photo.jpg" alt="Pedro Girardi" class="profile-photo">
         <div class="intro">
-          <h3>Hi, I'm Pedro, an ex-BCG US consultant currently working as a freelancer. </h3>
+          <h3>Hi, I'm Pedro, an ex-BCG US consultant currently working as a freelancer.</h3>
           <p>I have worked in portfolio optimization projects for companies that range anywhere from $60B to 15-person family businesses. My strengths lie in my data skills (I hold a degree in Statistics) and the ability to connect with clients from the C-Level to Jr. Analysts.</p>
           <div class="cta-buttons">
             <a href="cv.html" class="btn-download-cv">Download CV</a>
@@ -32,49 +32,48 @@
     </div>
   </section>
 
-
   <!-- Services Section -->
   <section id="services" class="services">
     <div class="container">
       <h2>Services</h2>
       <div class="service-list">
         <div class="service">
-	  <img src="portfolio.svg" alt="Service Icon" class="service-icon">
+          <img src="portfolio.svg" alt="Service Icon" class="service-icon">
           <h3>Portfolio Optimization</h3>
           <p>Identify winners and losers and update your strategy accordingly.</p>
         </div>
         <div class="service">
-	  <img src="journey.svg" alt="Service Icon" class="service-icon">
+          <img src="journey.svg" alt="Service Icon" class="service-icon">
           <h3>Customer Profiling and Journey</h3>
           <p>Know your clients and their painpoints throughout the customer journey.</p>
         </div>
         <div class="service">
-	  <img src="competitor.svg" alt="Service Icon" class="service-icon">
+          <img src="competitor.svg" alt="Service Icon" class="service-icon">
           <h3>Competitor Landscape Analysis</h3>
           <p>Are your price and offerings in line with your competitors?</p>
         </div>
       </div>
       <blockquote>
-        <p>"Having an “external” expert eye come in and make sense of different financial data and procedures was great, and we highly recommend working with Pedro to do that"</p>
+        <p>"Having an “external” expert eye come in and make sense of different financial data and procedures was great, and we highly recommend working with Pedro to do that."</p>
         <cite>— Monica Price, Managing Director of BikesPlus</cite>
       </blockquote>
     </div>
   </section>
 
-<!-- Past Projects Section -->
+  <!-- Past Projects Section -->
   <section id="projects" class="projects">
     <div class="container" style="padding-top: 0px;">
-      <h2>Examples of past projects</h2>
+      <h2>Examples of Past Projects</h2>
       <div class="project-list">
         <div class="project">
           <div class="project-icon">
             <img src="cash2.png" alt="Icon">
           </div>
           <div class="project-content">
-            <h3>Portfolio optimization for tourism client</h3>
-            <p><strong>Problem:</strong> My client could not estimate the labor costs of each product, limiting its ability to allocate capital and update pricing. That led to a decline in profitablity and the sale of some products at a loss.</p>
-            <p><strong>Solution:</strong> I estimated the distribution of labor costs across product lines through on-site observations and interviews. Moreover, I identified a gap in the knowledge of physical asset costs (e.ag., vans and bikes) and calculated a product P&L view which also takes these costs into account.</p>
-            <p><strong>Outcomes:</strong> Client identified that major growth bet was not profitable due to high usage of costly physical assets. Client ended unprofitable contract in that space, saving €0.1MM/year. Client implemented new pricing system which will take into account updated cost information to avoid future losses.</p>
+            <h3>Portfolio Optimization for Tourism Client</h3>
+            <p><strong>Problem:</strong> My client could not estimate the labor costs of each product, limiting its ability to allocate capital and update pricing. That led to a decline in profitability and the sale of some products at a loss.</p>
+            <p><strong>Solution:</strong> I estimated the distribution of labor costs across product lines through on-site observations and interviews. Moreover, I identified a gap in the knowledge of physical asset costs (e.g., vans and bikes) and calculated a product P&L view which also takes these costs into account.</p>
+            <p><strong>Outcomes:</strong> The client identified that their major growth bet was not profitable due to high usage of costly physical assets. They ended the unprofitable contract, saving €0.1MM/year, and implemented a new pricing system based on updated cost information to avoid future losses.</p>
             <p><strong>Skills:</strong> Excel modeling, interviews with 15+ employees</p>
           </div>
         </div>
@@ -83,10 +82,10 @@
             <img src="phone.png" alt="Icon">
           </div>
           <div class="project-content">
-            <h3>Portfolio diagnostic for major German tech company</h3>
+            <h3>Portfolio Diagnostic for Major German Tech Company</h3>
             <p><strong>Problem:</strong> My client was a leading German tech company with several brands undergoing a 2030 strategy overview. It lacked a comprehensive overview of its portfolio to inform long-term investments.</p>
-            <p><strong>Solution:</strong> I reated a unified view of demographic, engagement, and monetization data across all brands, identifying the strenghts and weaknesses of each brand and providing strategical recommendations. </p>
-            <p><strong>Outcomes:</strong> My client used insights to inform investment/divestment decisions and refine their 2030 strategy roadmap. </p>
+            <p><strong>Solution:</strong> I created a unified view of demographic, engagement, and monetization data across all brands, identifying the strengths and weaknesses of each brand and providing strategic recommendations.</p>
+            <p><strong>Outcomes:</strong> My client used insights to inform investment/divestment decisions and refine their 2030 strategy roadmap.</p>
             <p><strong>Skills:</strong> Data analysis, stakeholder communication, portfolio strategy.</p>
           </div>
         </div>
@@ -95,18 +94,17 @@
             <img src="handshake.png" alt="Icon">
           </div>
           <div class="project-content">
-            <h3>Go-to-market strategy for Fortune 500 distributor</h3>
+            <h3>Go-to-Market Strategy for Fortune 500 Distributor</h3>
             <p><strong>Employer:</strong> BCG US</p>
             <p><strong>Problem:</strong> Our client, a major distributor, wanted advice on the negotiation of a new contract with a business partner (group purchasing organization).</p>
-            <p><strong>Solution:</strong> I analyzed transaction data to estimate the impact of the busines partner in customer acquisition as well as potential cannibalization of existing accounts. With that information I ran a pre-post model on the impact of that business partner on overall sales and profitability. The analyses showed that the partnership had significantly hurt our client’s bottom line.</p>
-            <p><strong>Outcomes:</strong> Our client decided to take our recommendation and not renew the contract. That decision saved our client $118MM over the following eight years. </p>
+            <p><strong>Solution:</strong> I analyzed transaction data to estimate the impact of the business partner on customer acquisition as well as potential cannibalization of existing accounts. With that information, I ran a pre-post model on the impact of that business partner on overall sales and profitability. The analyses showed that the partnership had significantly hurt our client’s bottom line.</p>
+            <p><strong>Outcomes:</strong> Our client took our recommendation and did not renew the contract, saving $118MM over the following eight years.</p>
             <p><strong>Skills:</strong> Excel modeling, data manipulation, expert interviews</p>
           </div>
         </div>
       </div>
     </div>
   </section>
-
 
   <!-- Footer -->
   <footer>
@@ -127,5 +125,6 @@
       </div>
     </div>
   </footer>
+
 </body>
 </html>
