--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <img src="your-photo.jpg" alt="Pedro Girardi" class="profile-photo">
         <div class="intro">
           <h3>Hi, I'm Pedro, an ex-BCG US consultant currently working as a freelancer.</h3>
-          <p>I have worked in portfolio optimization projects for companies that range anywhere from $60B to 15-person family businesses. My strengths lie in my data skills (I hold a degree in Statistics) and the ability to connect with clients from the C-Level to Jr. Analysts.</p>
+          <p>I have worked in portfolio optimization projects for clients that range anywhere 15-person family businesses to Fortune 500 companies. My strengths lie in my data skills (I hold a degree in Statistics) and the ability to connect with clients from the C-Level to Jr. Analysts.</p>
+          <p>Let's get in touch and set up an intro call.</p>
           <div class="cta-buttons">
             <a href="cv.html" class="btn-download-cv">Download CV</a>
             <a href="chat.html" class="btn-get-in-touch">Get in Touch</a>
@@ -38,19 +39,19 @@
       <h2>Services</h2>
       <div class="service-list">
         <div class="service">
-          <img src="portfolio.svg" alt="Service Icon" class="service-icon">
-          <h3>Portfolio Optimization</h3>
-          <p>Identify winners and losers and update your strategy accordingly.</p>
+          <img src="chart.svg" alt="Service Icon" class="service-icon">
+          <h3>Portfolio snapshot</h3>
+          <p>Get a single source of truth for your products' performance to make better decisions.</p>
         </div>
         <div class="service">
           <img src="journey.svg" alt="Service Icon" class="service-icon">
-          <h3>Customer Profiling and Journey</h3>
-          <p>Know your clients and their painpoints throughout the customer journey.</p>
+          <h3>Optimization roadmap</h3>
+          <p>Identify levers (e.g., pricing, cost efficiencies) to increase profitability in the short to medium-term. </p>
         </div>
         <div class="service">
           <img src="competitor.svg" alt="Service Icon" class="service-icon">
-          <h3>Competitor Landscape Analysis</h3>
-          <p>Are your price and offerings in line with your competitors?</p>
+          <h3>Portfolio strategy review</h3>
+          <p>Design a portfolio that sets you up for success. Know where to invest or divest and plan around significant risks. </p>
         </div>
       </div>
       <blockquote>
