fix formatting ital

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
       <blockquote>
-        <p>"Having an “external” expert eye come in and make sense of different financial data and procedures was great, and we highly recommend working with Pedro to do that."</p>
+        <p>"Having an <i>external</i> expert eye come in and make sense of different financial data and procedures was great, and we highly recommend working with Pedro to do that."</p>
         <cite>— Monica Price, Managing Director of BikesPlus</cite>
       </blockquote>
     </div>
