Update intro text to focus on portfolio optimization and finalize photography pages

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
       <div class="hero-content">
         <img src="your-photo.jpg" alt="Pedro Girardi" class="profile-photo">
         <div class="intro">
-          <h3>Hi, I'm Pedro, an ex-BCG US consultant currently working as a freelancer.</h3>
+          <h3>Hi, I'm Pedro, an ex-BCG US consultant that specializes in portfolio optimization.</h3>
           <p>I have worked in portfolio optimization projects for clients that range anywhere 15-person family businesses to Fortune 500 companies. My strengths lie in my data skills (I hold a degree in Statistics) and the ability to connect with clients from the C-Level to Jr. Analysts.</p>
+		  <p>I am starting my third year as a freelancer. I love being an independent consultant and my clients love my work too. I am proud to say that every single client of mine has requested follow-up projects. </p>
           <p>Let's get in touch and set up an intro call.</p>
           <div class="cta-buttons">
             <a href="cv.html" class="btn-download-cv">Download CV</a>
