--- a/photography.html
+++ b/photography.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -13,8 +13,7 @@
     <div class="brand">Pedro Girardi Photography</div>
     <nav class="nav" aria-label="Photography collections">
       <a class="nav-link" href="#street">Street</a>
-      <a class="nav-link" href="#portraits">Portraits</a>
-      <a class="nav-link" href="#landscapes">Landscapes</a>
+      <a class="nav-link" href="#concert">Concert</a>
     </nav>
   </header>
 
@@ -25,16 +24,16 @@
         <div class="slideshow" aria-live="polite">
           <div class="slides">
             <div class="slide active">
-              <img src="Photography/slide-01.jpg" alt="Featured photograph 1">
+              <img src="Photography/street8.jpg" alt="Featured photograph 1">
             </div>
             <div class="slide">
-              <img src="Photography/slide-02.jpg" alt="Featured photograph 2">
+              <img src="Photography/concert0.jpg" alt="Featured photograph 2">
             </div>
             <div class="slide">
-              <img src="Photography/slide-03.jpg" alt="Featured photograph 3">
+              <img src="Photography/street3.jpg" alt="Featured photograph 3">
             </div>
             <div class="slide">
-              <img src="Photography/slide-04.jpg" alt="Featured photograph 4">
+              <img src="Photography/concert2.jpg" alt="Featured photograph 4">
             </div>
           </div>
         </div>
@@ -51,69 +50,39 @@
     <section class="collection" id="street">
       <div class="collection-header">
         <h2>Street</h2>
-        <p>Quiet gestures, kinetic light, and fleeting moments stitched into the city rhythm.</p>
       </div>
       <div class="gallery-grid">
-        <img class="wide" src="Photography/street-01.jpg" alt="Street photograph 1">
-        <img src="Photography/street-02.jpg" alt="Street photograph 2">
-        <img class="tall" src="Photography/street-03.jpg" alt="Street photograph 3">
-        <img src="Photography/street-04.jpg" alt="Street photograph 4">
-        <img src="Photography/street-05.jpg" alt="Street photograph 5">
-        <img class="wide" src="Photography/street-06.jpg" alt="Street photograph 6">
-        <img src="Photography/street-07.jpg" alt="Street photograph 7">
-        <img class="tall" src="Photography/street-08.jpg" alt="Street photograph 8">
-        <img src="Photography/street-09.jpg" alt="Street photograph 9">
-        <img src="Photography/street-10.jpg" alt="Street photograph 10">
-        <img class="wide" src="Photography/street-11.jpg" alt="Street photograph 11">
-        <img src="Photography/street-12.jpg" alt="Street photograph 12">
-      </div>
-    </section>
-
-    <section class="collection" id="portraits">
-      <div class="collection-header">
-        <h2>Portraits</h2>
-        <p>Intimate studies of expression and stillness, crafted with soft light and space.</p>
-      </div>
-      <div class="gallery-grid">
-        <img class="tall" src="Photography/portrait-01.jpg" alt="Portrait photograph 1">
-        <img src="Photography/portrait-02.jpg" alt="Portrait photograph 2">
-        <img src="Photography/portrait-03.jpg" alt="Portrait photograph 3">
-        <img class="wide" src="Photography/portrait-04.jpg" alt="Portrait photograph 4">
-        <img src="Photography/portrait-05.jpg" alt="Portrait photograph 5">
-        <img class="tall" src="Photography/portrait-06.jpg" alt="Portrait photograph 6">
-        <img src="Photography/portrait-07.jpg" alt="Portrait photograph 7">
-        <img class="wide" src="Photography/portrait-08.jpg" alt="Portrait photograph 8">
-        <img src="Photography/portrait-09.jpg" alt="Portrait photograph 9">
-        <img src="Photography/portrait-10.jpg" alt="Portrait photograph 10">
-        <img class="tall" src="Photography/portrait-11.jpg" alt="Portrait photograph 11">
-        <img src="Photography/portrait-12.jpg" alt="Portrait photograph 12">
-      </div>
-    </section>
-
-    <section class="collection" id="landscapes">
-      <div class="collection-header">
-        <h2>Landscapes</h2>
-        <p>Open horizons and layered textures that linger between light and atmosphere.</p>
-      </div>
-      <div class="gallery-grid">
-        <img class="wide" src="Photography/landscape-01.jpg" alt="Landscape photograph 1">
-        <img src="Photography/landscape-02.jpg" alt="Landscape photograph 2">
-        <img src="Photography/landscape-03.jpg" alt="Landscape photograph 3">
-        <img class="tall" src="Photography/landscape-04.jpg" alt="Landscape photograph 4">
-        <img src="Photography/landscape-05.jpg" alt="Landscape photograph 5">
-        <img class="wide" src="Photography/landscape-06.jpg" alt="Landscape photograph 6">
-        <img src="Photography/landscape-07.jpg" alt="Landscape photograph 7">
-        <img class="tall" src="Photography/landscape-08.jpg" alt="Landscape photograph 8">
-        <img src="Photography/landscape-09.jpg" alt="Landscape photograph 9">
-        <img src="Photography/landscape-10.jpg" alt="Landscape photograph 10">
-        <img class="wide" src="Photography/landscape-11.jpg" alt="Landscape photograph 11">
-        <img src="Photography/landscape-12.jpg" alt="Landscape photograph 12">
+        <img class="wide" src="Photography/street1.jpg" alt="Street photograph 1">
+        <img src="Photography/street2.jpg" alt="Street photograph 2">
+        <img class="tall" src="Photography/street3.jpg" alt="Street photograph 3">
+        <img src="Photography/street4.jpg" alt="Street photograph 4">
+        <img src="Photography/street5.jpg" alt="Street photograph 5">
+        <img class="wide" src="Photography/street6.jpg" alt="Street photograph 6">
+        <img src="Photography/street7.jpg" alt="Street photograph 7">
+        <img class="tall" src="Photography/street8.jpg" alt="Street photograph 8">
+        <img src="Photography/street9.jpg" alt="Street photograph 9">
       </div>
     </section>
   </main>
 
+  
+    <section class="collection" id="concert">
+      <div class="collection-header">
+        <h2>Concert</h2>
+      </div>
+      <div class="gallery-grid">
+        <img src="Photography/concert0.jpg" alt="Concert photograph 5">
+        <img class="wide" src="Photography/concert2.jpg" alt="Concert photograph 1">
+        <img src="Photography/concert1.jpg" alt="Concert photograph 2">
+        <img class="tall" src="Photography/concert3.jpg" alt="Concert photograph 3">
+        <img src="Photography/concert4.jpg" alt="Concert photograph 4">
+      </div>
+    </section>
+
+
   <footer class="footer">
     <p>For prints and commissions: <a href="mailto:contact@girardi.io">contact@girardi.io</a></p>
+    <p>Based in Rome.</p>
   </footer>
 
   <script src="photography.js"></script>
