ulterior formatting edits including photo zoom

--- a/photography.html
+++ b/photography.html
@@ -85,6 +85,13 @@
     <p>Based in Rome.</p>
   </footer>
 
+  <div class="lightbox" role="dialog" aria-modal="true" aria-label="Expanded photo view">
+    <div class="lightbox-content">
+      <button class="lightbox-close" type="button" aria-label="Close photo view">X</button>
+      <img src="" alt="">
+    </div>
+  </div>
+
   <script src="photography.js"></script>
 </body>
 </html>
