fix formatting title vs body

--- a/photography.html
+++ b/photography.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="top-bar">
-    <div class="brand">Pedro Girardi Photography</div>
+    <h1 class="brand">Pedro Girardi Photography</h1>
     <nav class="nav" aria-label="Photography collections">
       <a class="nav-link" href="#street">Street</a>
       <a class="nav-link" href="#concert">Concert</a>
